--- a/detail-order.html
+++ b/detail-order.html
@@ -217,7 +217,7 @@
                 clip-rule="evenodd" />
             </svg>
             <p class="text-xs text-slate-400 leading-relaxed" data-i18n="status_info_desc">
-              Produk digital Anda akan ditampilkan di halaman ini dan juga dikirimkan ke email Anda. Simpan Order ID
+              Produk digital Anda akan ditampilkan di halaman ini dan silahkan chat support jika produk tidak sesuai/berfungsi. Simpan Order ID
               untuk referensi.
             </p>
           </div>
@@ -513,5 +513,6 @@
     window.viewInvoice = viewInvoice;
   </script>
 </body>
+
 
 </html>
