--- a/detail-order.html
+++ b/detail-order.html
@@ -503,7 +503,7 @@
       const invoiceId = displayedRef && displayedRef !== '...' && displayedRef !== '-' ? displayedRef : refId;
 
       if (invoiceId) {
-        window.location.href = `https://arufkuy.myr.id/invoice/${invoiceId}`;
+        window.location.href = `https://arufkuy.myr.id/invoices/${invoiceId}`;
       } else {
         alert("Invoice ID belum tersedia.");
       }
@@ -516,4 +516,3 @@
 
 
 </html>
-
